--- a/source/less/blocks/short-promo.less
+++ b/source/less/blocks/short-promo.less
@@ -27,21 +27,21 @@
       z-index: 1;
     }
   }
-
-  &__short-text-image {
-    padding-top: 51px;
-    padding-bottom: 62px;
-    max-width: 100%;
-    height: auto;
-  }
 }
 
-// .short-promo__short-text-image {
-//   padding-top: 51px;
-//   padding-bottom: 62px;
-//   max-width: 100%;
-//   height: auto;
-// }
+.promo__triangle-mobile {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.short-promo__short-text-image {
+  padding-top: 51px;
+  padding-bottom: 62px;
+  max-width: 100%;
+  height: auto;
+}
 
 @media (min-width: @tablet-width) {
   .short-promo {
