--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -10,91 +10,79 @@
   padding-top: 22px;
   padding-left: 25px;
   padding-right: 25px;
-  padding-bottom: 18px;
-
-  &__about {
-    color: @black;
-    font-weight: bold;
-    font-size: 18px;
-    padding-bottom: 10px;
-  }
-
-  &__reasons {
-    color: @grey;
-    font-size: 14px;
-    padding-bottom: 8px;
-  }
-
-  &__reasons--narrow {
-    line-height: 24px;
-  }
+  padding-bottom: 0;
 }
 
-.page-photo {
-  .welcome-text {
-    padding-top: 18px;
+.welcome-text__about {
+  color: @black;
+  font-weight: bold;
+  font-size: 18px;
+  padding-bottom: 10px;
+}
+
+.welcome-text__reasons {
+  color: @grey;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.welcome-text__reasons--narrow {
+  line-height: 24px;
+}
+
+.welcome-text--gallary {
+    padding-top: 19px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 6px;
-  }
-
-  .welcome-text__about {
-    padding-bottom: 8px;
-  }
+    padding-bottom: 21px;
 }
 
-// .welcome-text__about {
-//   color: @black;
-//   font-weight: bold;
-//   font-size: 18px;
-//   padding-bottom: 10px;
-// }
+.welcome-text--gallary .welcome-text__about {
+  padding-bottom: 9px;
+}
 
-// .welcome-text__reasons {
-//   color: @grey;
-//   font-size: 14px;
-//   padding-bottom: 8px;
-// }
+.welcome-text--gallary-total {
+  padding-top: 15px;
+  padding-bottom: 26px;
+  border-top: 1px solid #e5e5e5;
+}
 
-// .welcome-text__reasons--narrow {
-//   line-height: 24px;
-// }
+.welcome-text--gallary-total .welcome-text__about {
+  padding-bottom: 8px;
+}
 
 @media (min-width: @tablet-width) {
   .welcome-text {
     padding-top: 29px;
     padding-left: 110px;
     padding-right: 110px;
-    padding-bottom: 28px;
-
-    &__about {
-      color: @black;
-      font-weight: bold;
-      font-size: 21px;
-      padding-bottom: 7px;
-    }
-
-    &__reasons {
-      color: @grey;
-      font-size: 14px;
-      padding-bottom: 8px;
-    }
+    padding-bottom: 37px;
+  }
+  .welcome-text__about {
+    color: @black;
+    font-weight: bold;
+    font-size: 21px;
+    padding-bottom: 7px;
   }
 
-  .page-photo {
-    .welcome-text {
-      padding-top: 44px;
+  .welcome-text__reasons {
+    color: @grey;
+    font-size: 14px;
+    padding-bottom: 8px;
+  }
 
-      &__about {
-        font-size: 30px;
-        padding-bottom: 0;
-      }
+  .welcome-text--gallary {
+    padding-top: 44px;
+  }
 
-      &__reasons {
-        padding-left: 150px;
-        padding-right: 150px;
-      }
-    }
+  .welcome-text--gallary .welcome-text__about {
+    font-size: 30px;
+    padding-bottom: 0;
+  }
+
+  .welcome-text--gallary .welcome-text__reasons {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
@@ -105,19 +93,17 @@
     padding-right: 310px;
   }
 
-  .page-photo {
-    .welcome-text {
-      padding-top: 81px;
+  .welcome-text--gallary {
+    padding-top: 81px;
+  }
 
-      &__about {
-        font-size: 30px;
-        padding-bottom: 0;
-      }
+  .welcome-text--gallary .welcome-text__about {
+    font-size: 30px;
+    padding-bottom: 0;
+  }
 
-      &__reasons {
-        padding-left: 360px;
-        padding-right: 360px;
-      }
-    }
+  .welcome-text--gallary .welcome-text__reasons {
+    padding-left: 70px;
+    padding-right: 70px;
   }
 }
