--- a/source/less/blocks/features-list.less
+++ b/source/less/blocks/features-list.less
@@ -6,7 +6,8 @@
   text-align: left;
   margin: 0;
   padding: 0;
-  padding-bottom: 35px;
+  padding-bottom: 37px;
+  padding-top: 7px;
 }
 
 .features-list__item {
@@ -103,7 +104,7 @@
   padding-top: 14px;
   padding-left: 69px;
   padding-right: 20px;
-  padding-bottom: 1px;
+  padding-bottom: 0;
 }
 
 @media (min-width: @tablet-width) {
