--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -1,30 +1,60 @@
 .gallary {
-  border: 2px solid @green;
-  margin: 2px;
-  padding: 2px;
-
+  // border: 2px solid @green;
+  // margin: 2px;
+  // padding: 2px;
+  margin: 0;
+  padding: 0;
   line-height: 24px;
+}
+
+.gallary__item {
+  // border: 2px solid @black;
+  border-top: 1px solid #e5e5e5;
+  padding-top: 23px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 16px;
 }
 
 .gallary__image {
   background-color: @light-blue;
 }
 
+.gallary__description {
+  display: flex;
+  flex-direction: column;
+}
+
 .gallary__title {
   font-weight: bold;
+  margin: 0;
+  padding-top: 8px;
 }
 
 .gallary__author {
   color: @grey;
   text-transform: none;
+  margin: 0;
 }
 
 .gallary__likes {
-  font-weight: bold;
-}
+  position: relative;
 
-.gallary__item {
-  border: 2px solid @black;
+  font-weight: bold;
+  padding-top: 8px;
+  padding-left: 37px;
+
+  &::before {
+    position: absolute;
+
+    content: "";
+    background-image: url("../../img/icon-like.svg");
+    top: 7px;
+    left: 0px;
+    background-size: 22px 20px;
+    height: 20px;
+    width: 22px;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -34,23 +64,17 @@
     flex-wrap: wrap;
   }
 
-  // .gallary__item:nth-child(2),
-  // .gallary__item:nth-child(3),
-  // .gallary__item:nth-child(4) {
   .gallary__item {
     width: 49.4%;
+    border: none;
   }
 
-  //.gallary__item:nth-child(1) {
   .gallary__item--large {
     width: 100%;
   }
 }
 
 @media (min-width: @desktop-width) {
-  // .gallary__item:nth-child(2),
-  // .gallary__item:nth-child(3),
-  // .gallary__item:nth-child(4) {
   .gallary__item {
     width: 32.9%;
   }
