--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,5 +1,5 @@
 .photos {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 2px;
 }
