--- a/source/less/blocks/video-player.less
+++ b/source/less/blocks/video-player.less
@@ -3,3 +3,27 @@
   // margin: 2px;
   // padding: 2px;
 }
+
+.video-player__movie {
+  width: 320px;
+  height: 210px;
+}
+
+@media (min-width: @tablet-width) {
+  .video-player {
+    // padding-top: 20px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .video-player__movie {
+    width: 100%;
+    height: 500px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .video-player {
+    padding-bottom: 85px;
+  }
+}
