--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -84,6 +84,23 @@
     padding-left: 50px;
     padding-right: 50px;
   }
+
+  .welcome-text--gallary-total {
+    padding-top: 15px;
+    padding-bottom: 14px;
+    border: none;
+  }
+
+  .welcome-text--gallary-total .welcome-text__about {
+    font-size: 30px;
+    padding-top: 21px;
+    padding-bottom: 0;
+   }
+
+   .welcome-text--gallary-total .welcome-text__reasons {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -105,5 +122,22 @@
   .welcome-text--gallary .welcome-text__reasons {
     padding-left: 70px;
     padding-right: 70px;
+  }
+
+  .welcome-text--gallary-total {
+    padding-top: 21px;
+    padding-bottom: 59px;
+    border: none;
+  }
+
+  .welcome-text--gallary-total .welcome-text__about {
+    font-size: 30px;
+    padding-top: 21px;
+    padding-bottom: 0;
+   }
+
+   .welcome-text--gallary-total .welcome-text__reasons {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 }
