--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -28,6 +28,21 @@
   z-index: 1;
 }
 
+.page-header__close-menu {
+  position: absolute;
+  top: 16px;
+  right: 14px;
+
+  border: none;
+  background: none;
+
+  cursor: pointer;
+}
+
+.page-header__close-menu polygon {
+  fill: @white;
+}
+
 .page-header__open-nav {
   position: absolute;
   // top: 17px;
