--- a/source/less/blocks/sending-success.less
+++ b/source/less/blocks/sending-success.less
@@ -1,20 +1,35 @@
 .sending-success {
-  border: 2px solid @red;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @red;
+  // margin: 2px;
+  // padding: 2px;
+
+  display: none;
+
+  position: absolute;
+  top: 1880px;
+  left: 0;
+
+  background-color: @white;
 
   line-height: 26px;
   text-align: center;
+  box-shadow: 0 5px 15px -5px rgba(0, 1, 1, 0.2) ,  0 -5px 15px -15px rgba(0, 1, 1, 0.2);
+  padding-top: 35px;
+  padding-bottom: 25px;
 }
 
 .sending-success__header {
   font-size: 18px;
   font-weight: bold;
+  padding-bottom: 15px;
 }
 
 .sending-success__description {
   line-height: 24px;
   color: @grey;
+  padding-bottom: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .sending-success__button {
@@ -24,4 +39,7 @@
   color: @white;
   background-color: @light-blue;
   text-transform: uppercase;
+  min-height: 58px;
+  min-width: 280px;
+  border: none;
 }
