--- a/source/less/blocks/welcome-text.less
+++ b/source/less/blocks/welcome-text.less
@@ -51,6 +51,17 @@
   padding-bottom: 8px;
 }
 
+.welcome-text--form {
+  padding-top: 19px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 12px;
+}
+
+.welcome-text--form .welcome-text__about {
+  padding-bottom: 9px;
+}
+
 @media (min-width: @tablet-width) {
   .welcome-text {
     padding-top: 29px;
@@ -97,9 +108,26 @@
     padding-bottom: 0;
    }
 
-   .welcome-text--gallary-total .welcome-text__reasons {
+  .welcome-text--gallary-total .welcome-text__reasons {
     padding-left: 60px;
     padding-right: 60px;
+  }
+
+  .welcome-text--form {
+    padding-top: 46px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 12px;
+  }
+
+  .welcome-text--form .welcome-text__about {
+    font-size: 30px;
+    padding-bottom: 0;
+  }
+
+  .welcome-text--form .welcome-text__reasons {
+    padding-left: 140px;
+    padding-right: 140px;
   }
 }
 
@@ -139,5 +167,22 @@
    .welcome-text--gallary-total .welcome-text__reasons {
     padding-left: 60px;
     padding-right: 60px;
+  }
+
+  .welcome-text--form {
+    padding-top: 81px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 0;
+  }
+
+  .welcome-text--form .welcome-text__about {
+    font-size: 30px;
+    padding-bottom: 0;
+  }
+
+  .welcome-text--form .welcome-text__reasons {
+    padding-left: 360px;
+    padding-right: 360px;
   }
 }
