--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -1,8 +1,9 @@
 .attractions {
-  border: 2px solid @green;
-  margin: 2px;
-  padding: 2px;
+  // border: 2px solid @green;
+  // margin: 2px;
+  // padding: 2px;
 
+  border-top: 1px solid #e5e5e5;
   line-height: 26px;
 }
 
@@ -12,12 +13,164 @@
 //   font-weight: bold;
 // }
 
+.attractions_elements {
+  display: flex;
+  flex-direction: column;
+}
+
 .attractions__checkbox-element {
-  padding: 5px;
+  padding-top: 10px;
+  padding-bottom: 43px;
+  padding-left: 37px;
+}
+
+.attractions__checkbox {
+  display: none;
 }
 
 .attractions__label {
   font-size: 18px;
   font-weight: bold;
   text-transform: none;
+  padding-left: 42px;
+
+  position: relative;
+  cursor: pointer;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -15px;
+    left: -37px;
+    width: 56px;
+    height: 56px;
+    margin: auto;
+    border-radius: 10%;
+    background-color: #f2f2f2;
+  }
+
+  &:hover::before {
+    background-color: #e5e5e5;
+  }
+
+  &:active::before {
+    background-color: #d5d5d5;
+  }
+}
+
+.attractions__checkbox:checked~.attractions__label {
+  &::after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: -21px;
+    width: 25px;
+    height: 19px;
+    background-image: url(../../img/icon-tick.svg);
+    background-size: 25px 19px;
+  }
+
+  &:active::after {
+    opacity: 0.3;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .attractions {
+    border: none;
+    position: relative;
+    padding-bottom: 20px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 40px;
+      left: 0;
+      width: 125px;
+      height: 1px;
+      border-top: 1px solid #dbdbdb;
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      top: 40px;
+      right: 0;
+      width: 125px;
+      height: 1px;
+      border-top: 1px solid #dbdbdb;
+    }
+  }
+
+  .attractions__caption {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 25px;
+    padding-right: 150px;
+    padding-left: 150px;
+  }
+
+  .attractions_elements {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-left: 95px;
+    // padding-right: 20px;
+  }
+
+  .attractions__checkbox-element {
+    min-width: 200px;
+    padding-top: 30px;
+    padding-bottom: 32px;
+    padding-right: 24px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .attractions {
+    border: none;
+    position: relative;
+    padding-bottom: 20px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      top: 40px;
+      left: 0;
+      width: 280px;
+      height: 1px;
+      border-top: 1px solid #dbdbdb;
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      top: 40px;
+      right: 0;
+      width: 280px;
+      height: 1px;
+      border-top: 1px solid #dbdbdb;
+    }
+  }
+
+  .attractions__caption {
+    text-align: center;
+    padding-right: 350px;
+    padding-left: 350px;
+  }
+
+  .attractions_elements {
+    flex-direction: row;
+    justify-content: space-between;
+    // flex-wrap: nowrap;
+    padding-left: 0;
+    // padding-right: 40px;
+  }
+
+  .attractions__checkbox-element {
+    min-width: 0;
+    padding-top: 30px;
+    padding-bottom: 32px;
+    padding-right: 0;
+    padding-left: 40px;
+  }
 }
