--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -13,6 +13,18 @@
   background-repeat: no-repeat;
   background-color: @light-blue;
   text-align: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -23px;
+    left: 0;
+    height: 49px;
+    width: 100%;
+    background-image: url("../../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 103%, 49px;
+  }
 }
 
 .promo__text-image {
@@ -33,6 +45,18 @@
   .promo {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-position: bottom;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -23px;
+      left: 0;
+      height: 80px;
+      width: 100%;
+      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      background-repeat: no-repeat;
+      background-size: 100%, 80px;
+    }
   }
 
   .promo__text-image {
@@ -45,5 +69,17 @@
   .promo {
     background-image: url("../../img/bg-back-desktop@1x.jpg");
     background-position: bottom;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -53px;
+      left: 0;
+      height: 110px;
+      width: 100%;
+      background-image: url("../../img/bg-intro-triangle-desktop.svg");
+      background-repeat: no-repeat;
+      background-size: 100%, 110px;
+    }
   }
 }
