--- a/source/less/blocks/short-promo.less
+++ b/source/less/blocks/short-promo.less
@@ -15,17 +15,15 @@
   position: relative;
 
   &::after {
-    @media @mobile-width-only {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background-image: url("../../img/bg-intro-triangle-mobile.svg");
-      width: 100%;
-      top: 133px;
-      content: "";
-      background-repeat: no-repeat;
-      z-index: 1;
-    }
+    content: "";
+    position: absolute;
+    bottom: -23px;
+    left: 0;
+    height: 49px;
+    width: 100%;
+    background-image: url("../../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 103%, 49px;
   }
 }
 
@@ -48,16 +46,23 @@
     background-image: url("../../img/bg-back-tablet@1x.jpg");
     background-position: bottom;
 
-    &__short-text-image {
-      padding-top: 94px;
-      padding-bottom: 110px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -23px;
+      left: 0;
+      height: 80px;
+      width: 100%;
+      background-image: url("../../img/bg-intro-triangle-tablet.svg");
+      background-repeat: no-repeat;
+      background-size: 100%, 80px;
     }
   }
 
-  // .short-promo__short-text-image {
-  //   padding-top: 94px;
-  //   padding-bottom: 110px;
-  // }
+  .short-promo__short-text-image {
+    padding-top: 94px;
+    padding-bottom: 110px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -65,15 +70,21 @@
     background-image: url("../../img/bg-back-desktop@1x.jpg");
     background-position: bottom;
 
-    &__short-text-image {
-      padding-top: 100px;
-      padding-bottom: 116px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -53px;
+      left: 0;
+      height: 110px;
+      width: 100%;
+      background-image: url("../../img/bg-intro-triangle-desktop.svg");
+      background-repeat: no-repeat;
+      background-size: 100%, 110px;
     }
   }
 
-
-  // .short-promo__short-text-image {
-  //   padding-top: 100px;
-  //   padding-bottom: 116px;
-  // }
+  .short-promo__short-text-image {
+    padding-top: 100px;
+    padding-bottom: 116px;
+  }
 }
