Задание 10 - Адаптивные декоративные элементы - исправление стилистических ошибок

--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -38,7 +38,7 @@
   cursor: pointer;
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: -15px;
     left: -37px;
@@ -58,15 +58,15 @@
   }
 }
 
-.attractions__checkbox:checked~.attractions__label {
+.attractions__checkbox:checked ~ .attractions__label {
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 5px;
     left: -21px;
     width: 25px;
     height: 19px;
-    background-image: url(../../img/icon-tick.svg);
+    background-image: url("../../img/icon-tick.svg");
     background-size: 25px 19px;
   }
 
