--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -67,8 +67,8 @@
   &::after {
     position: absolute;
     content: "";
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     width: 58px;
     height: 58px;
 
@@ -86,8 +86,8 @@
   &::after {
     position: absolute;
     content: "";
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     width: 58px;
     height: 58px;
 
