--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -52,7 +52,7 @@
     content: "";
     background-image: url("../../img/icon-like.svg");
     top: 7px;
-    left: 0px;
+    left: 0;
     background-size: 22px 20px;
     height: 20px;
     width: 22px;
