--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -40,7 +40,7 @@
   cursor: pointer;
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: -14px;
     left: -20px;
@@ -60,9 +60,9 @@
   }
 }
 
-.impression__radio:checked~.impression__label {
+.impression__radio:checked ~ .impression__label {
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 3px;
     left: -3px;
@@ -74,7 +74,7 @@
   }
 
   &:active::after {
-    background-color: rgba(51,51,51, 0.3);
+    background-color: rgba(51, 51, 51, 0.3);
   }
 }
 
