--- a/source/less/blocks/sending-fail.less
+++ b/source/less/blocks/sending-fail.less
@@ -13,7 +13,8 @@
 
   line-height: 26px;
   text-align: center;
-  box-shadow: 0 5px 15px -5px rgba(0, 1, 1, 0.2) ,  0 -5px 15px -15px rgba(0, 1, 1, 0.2);
+  box-shadow: 0 5px 15px -5px rgba(0, 1, 1, 0.2),
+    0 -5px 15px -15px rgba(0, 1, 1, 0.2);
   padding-top: 35px;
   padding-bottom: 35px;
 }
