--- a/source/less/blocks/video-player.less
+++ b/source/less/blocks/video-player.less
@@ -33,7 +33,7 @@
 
 .video-player__progress {
   position: absolute;
-
+  cursor: pointer;
   background-color: rgba(0, 0, 0, 0.6);
   height: 45px;
 
@@ -67,8 +67,8 @@
 .video-player__button {
   border: none;
   padding: 0;
-  // background-color: #f2f2f2;
   background: none;
+  cursor: pointer;
 
   & path {
     fill: #5c6870;
