--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -28,41 +28,45 @@
   z-index: 1;
 }
 
-.page-header__close-menu {
-  position: absolute;
-  top: 16px;
-  right: 14px;
+// .page-header__close-menu {
+//   position: absolute;
+//   top: 16px;
+//   right: 14px;
 
-  border: none;
-  background: none;
+//   border: none;
+//   background: none;
 
-  cursor: pointer;
-}
+//   cursor: pointer;
+// }
 
-.page-header__close-menu polygon {
-  fill: @white;
-}
+// .page-header__close-menu polygon {
+//   fill: @white;
+// }
 
-.page-header__open-nav {
-  position: absolute;
-  // top: 17px;
-  bottom: 14px;
-  right: 14px;
-  // margin-left: -51px;
+// .page-header__open-nav {
+//   position: absolute;
+//   // top: 17px;
+//   bottom: 14px;
+//   right: 14px;
+//   // margin-left: -51px;
 
-  border: none;
-  color: @light-blue;
-  background-color: @white;
+//   border: none;
+//   color: @light-blue;
+//   background-color: @white;
 
-  fill: @light-blue;
+//   fill: @light-blue;
 
-  cursor: pointer;
-}
+//   cursor: pointer;
+// }
 
 @media (min-width: @tablet-width) {
-  .page-header__open-nav {
-    display: none;
-  }
+  // .page-header__open-nav {
+  //   display: none;
+  // }
+
+  // .page-header__close-menu {
+  //   display: none;
+  // }
 
   /*.page-header__logo-wrapper {
     position: absolute;
