Задание 13 - В проект добавлена адаптивная графика

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -73,7 +73,7 @@
     height: 58px;
 
     background-color: #e6e6e6;
-    background-image: url("../../img/icon-phone.svg");
+    background-image: url("../img/icon-phone.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -92,7 +92,7 @@
     height: 58px;
 
     background-color: #e6e6e6;
-    background-image: url("../../img/icon-mail.svg");
+    background-image: url("../img/icon-mail.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
