--- a/source/less/blocks/attractions.less
+++ b/source/less/blocks/attractions.less
@@ -66,7 +66,7 @@
     left: -21px;
     width: 25px;
     height: 19px;
-    background-image: url("../../img/icon-tick.svg");
+    background-image: url("../img/icon-tick.svg");
     background-size: 25px 19px;
   }
 
