--- a/source/less/blocks/features-list.less
+++ b/source/less/blocks/features-list.less
@@ -35,7 +35,7 @@
   position: absolute;
 
   content: "";
-  background-image: url("../../img/icon-house.svg");
+  background-image: url("../img/icon-house.svg");
   top: 18px;
   left: 22px;
   background-size: 37px 39px;
@@ -59,7 +59,7 @@
   top: 17px;
   left: 24px;
   content: "";
-  background-image: url("../../img/icon-gift.svg");
+  background-image: url("../img/icon-gift.svg");
   background-size: 32px 38px;
   height: 38px;
   width: 32px;
@@ -81,7 +81,7 @@
   top: 19px;
   left: 20px;
   content: "";
-  background-image: url("../../img/icon-burger.svg");
+  background-image: url("../img/icon-burger.svg");
   background-size: 37px 42px;
   height: 42px;
   width: 37px;
