--- a/source/less/blocks/gallary.less
+++ b/source/less/blocks/gallary.less
@@ -50,7 +50,7 @@
     position: absolute;
 
     content: "";
-    background-image: url("../../img/icon-like.svg");
+    background-image: url("../img/icon-like.svg");
     top: 7px;
     left: 0;
     background-size: 22px 20px;
@@ -93,7 +93,7 @@
     padding-right: 20px;
     padding-left: 20px;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
   }
 
@@ -101,6 +101,20 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 18px;
+    width: 75%;
+  }
+
+  .gallary__item--large .gallary__text-description {
+    width: 92%;
+  }
+
+  .gallary__likes {
+    padding-top: 0;
+
+    &::before {
+      top: 1px;
+      left: 6px;
+    }
   }
 }
 
@@ -133,6 +147,7 @@
   .gallary__text-description {
     padding-left: 22px;
     padding-bottom: 15px;
+    width: 72%;
   }
 
   .gallary__author {
@@ -140,6 +155,11 @@
   }
 
   .gallary__likes {
+    padding-top: 2px;
     padding-right: 20px;
+
+    &::before {
+      left: 5px;
+    }
   }
 }
