--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,9 +2,25 @@
   // border: 2px solid @red;
   // margin: 2px;
   // padding: 2px;
+  position: relative;
+
+  &::before {
+    content: "";
+    top: 50%;
+    margin-top: -17px;
+    left: 50%;
+    margin-left: -15px;
+    position: absolute;
+    background-image: url("../img/icon-map-marker.svg");
+    background-repeat: no-repeat;
+    height: 27px;
+    width: 27px;
+  }
 }
 
 .map__image {
   background-color: @light-blue;
   width: 100%;
+  height: 350px;
+  vertical-align: middle;
 }
