--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -4,8 +4,9 @@
   // padding: 20px;
   margin: 0;
   text-align: center;
-  padding-top: 30px;
+  // padding-top: 30px;
   padding-bottom: 30px;
+  padding-top: 35px;
 }
 
 .page-footer__hashteg {
@@ -17,7 +18,7 @@
 }
 
 .page-footer__develop-link {
-  padding-bottom: 50px;
+  // padding-bottom: 50px;
   line-height: 26px;
   color: @black;
 
@@ -53,6 +54,7 @@
   .page-footer__develop-link {
     padding-top: 7px;
     margin-left: 5px;
+    padding-bottom: 50px;
   }
 }
 
