--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -8,22 +8,32 @@
 
   position: relative;
 
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+
+  @media (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
+
   background-position: bottom;
   background-repeat: no-repeat;
   background-color: @light-blue;
+  background-size: cover;
   text-align: center;
 
   &::after {
     content: "";
     position: absolute;
-    bottom: -23px;
+    // bottom: -23px;
+    bottom: -1px;
     left: 0;
-    height: 49px;
+    // height: 49px;
+    height: 160px;
     width: 100%;
-    background-image: url("../../img/bg-intro-triangle-mobile.svg");
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
     background-repeat: no-repeat;
-    background-size: 103%, 49px;
+    background-position: bottom;
+    // background-size: 103%, 49px;
+    background-size: 103%, 100%;
   }
 }
 
@@ -43,18 +53,24 @@
 
 @media (min-width: @tablet-width) {
   .promo {
-    background-image: url("../../img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
+
     background-position: bottom;
 
     &::after {
       content: "";
       position: absolute;
-      bottom: -23px;
+      // bottom: -23px;
       left: 0;
-      height: 80px;
+      // height: 80px;
+
       width: 100%;
-      background-image: url("../../img/bg-intro-triangle-tablet.svg");
-      background-repeat: no-repeat;
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+      // background-repeat: no-repeat;
       background-size: 100%, 80px;
     }
   }
@@ -67,18 +83,23 @@
 
 @media (min-width: @desktop-width) {
   .promo {
-    background-image: url("../../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
+
     background-position: bottom;
 
     &::after {
       content: "";
       position: absolute;
-      bottom: -53px;
+      // bottom: -53px;
       left: 0;
       height: 110px;
       width: 100%;
-      background-image: url("../../img/bg-intro-triangle-desktop.svg");
-      background-repeat: no-repeat;
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+      // background-repeat: no-repeat;
       background-size: 100%, 110px;
     }
   }
