--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -121,31 +121,37 @@
 
 .reasons__photo {
   background-color: @light-blue;
-  // vertical-align: bottom;
+  vertical-align: bottom;
+  text-align: center;
 
   height: 260px;
-  width: auto;
+  width: 100%;
 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.reasons__photo--city {
-  background-image: url("../img/main-city-mobile@1x.jpg");
-
-  @media (min-resolution: @retina-dppx) {
-    background-image: url("../img/main-city-mobile@2x.jpg");
-  }
+.reasons__photo-image {
+  width: 100%;
+  height: 100%;
 }
 
-.reasons__photo--bridge {
-  background-image: url("../img/photo-bridge-mobile@1x.jpg");
+// .reasons__photo--city {
+//   background-image: url("../img/main-city-mobile@1x.jpg");
 
-  @media (min-resolution: @retina-dppx) {
-    background-image: url("../img/photo-bridge-mobile@2x.jpg");
-  }
-}
+//   @media (min-resolution: @retina-dppx) {
+//     background-image: url("../img/main-city-mobile@2x.jpg");
+//   }
+// }
+
+// .reasons__photo--bridge {
+//   background-image: url("../img/photo-bridge-mobile@1x.jpg");
+
+//   @media (min-resolution: @retina-dppx) {
+//     background-image: url("../img/photo-bridge-mobile@2x.jpg");
+//   }
+// }
 
 @media (min-width: @tablet-width) {
   .reasons {
@@ -181,26 +187,27 @@
   }
 
   .reasons__photo {
-    flex-grow: 1;
+    // flex-grow: 1;
     height: 256px;
+    width: 66.7%;
   }
 
-  .reasons__photo--city {
-    background-image: url("../img/main-city-tablet@1x.jpg");
+  // .reasons__photo--city {
+  //   background-image: url("../img/main-city-tablet@1x.jpg");
 
-    @media (min-resolution: @retina-dppx) {
-      background-image: url("../img/main-city-tablet@2x.jpg");
-    }
-  }
+  //   @media (min-resolution: @retina-dppx) {
+  //     background-image: url("../img/main-city-tablet@2x.jpg");
+  //   }
+  // }
 
-  .reasons__photo--bridge {
-    background-image: url("../img/photo-bridge-tablet@1x.jpg");
+//   .reasons__photo--bridge {
+//     background-image: url("../img/photo-bridge-tablet@1x.jpg");
 
-    @media (min-resolution: @retina-dppx) {
-      background-image: url("../img/photo-bridge-tablet@2x.jpg");
-    }
-  }
-}
+//     @media (min-resolution: @retina-dppx) {
+//       background-image: url("../img/photo-bridge-tablet@2x.jpg");
+//     }
+//   }
+// }
 
 @media (min-width: @desktop-width) {
   /*desktop*/
@@ -221,19 +228,20 @@
     padding-bottom: 65px;
   }
 
-  .reasons__photo--city {
-    background-image: url("../img/main-city-desktop@1x.jpg");
+  // .reasons__photo--city {
+  //   background-image: url("../img/main-city-desktop@1x.jpg");
 
-    @media (min-resolution: @retina-dppx) {
-      background-image: url("../img/main-city-desktop@2x.jpg");
-    }
-  }
+  //   @media (min-resolution: @retina-dppx) {
+  //     background-image: url("../img/main-city-desktop@2x.jpg");
+  //   }
+  // }
 
-  .reasons__photo--bridge {
-    background-image: url("../img/photo-bridge-desktop@1x.jpg");
+  // .reasons__photo--bridge {
+  //   background-image: url("../img/photo-bridge-desktop@1x.jpg");
 
-    @media (min-resolution: @retina-dppx) {
-      background-image: url("../img/photo-bridge-desktop@2x.jpg");
-    }
+  //   @media (min-resolution: @retina-dppx) {
+  //     background-image: url("../img/photo-bridge-desktop@2x.jpg");
+  //   }
+  // }
   }
 }
