--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -135,6 +135,9 @@
 .reasons__photo-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  // max-width: 100%;
+  // height: auto;
 }
 
 // .reasons__photo--city {
