Задание 15 - svg спрайт

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -37,8 +37,13 @@
   cursor: pointer;
 }
 
-.main-nav__close-nav polygon {
+// .main-nav__close-nav polygon {
+.main-nav__close-nav-icon {
   fill: @white;
+}
+
+.main-nav__open-nav-icon {
+  fill: @light-blue;
 }
 
 .main-nav__open-nav {
