Задание 15 - Вставлен svg спрайт на страницу index.html

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,19 +7,33 @@
 
 .page-header__logo {
   position: absolute;
-  bottom: -33px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 102px;
+  bottom: -47px;
+  // left: 0;
+  left: 50%;
+  margin-left: -93px;
+  // border: 1px solid black;
+  // right: 0;
+  // margin: auto;
 
   z-index: 1;
+}
+
+.sedona-logo__blue-background {
+  display: none;
+}
+
+.sedona-logo__bridge {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
   .page-header__logo {
     // position: absolute;
     top: 0;
+  }
+
+  .sedona-logo__bridge {
+    display: inline;
   }
 
   .page-header {
@@ -32,5 +46,9 @@
 @media (min-width: @desktop-width) {
   .page-header__logo {
     width: 189px;
+  }
+
+  .sedona-logo__blue-background {
+    display: inline;
   }
 }
