--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -13,6 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  fill: #ffffff;
 
   &:hover,
   &:focus {
@@ -23,7 +24,7 @@
     background-color: #5496bd;
   }
 
-  &:active path {
+  &:active {
     fill: #88b6d1;
   }
 }
