--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -22,12 +22,14 @@
   line-height: 26px;
   color: @black;
 
-  &:hover path,
-  &:focus path {
+  fill: @black;
+
+  &:hover,
+  &:focus {
     fill: #81b3d2;
   }
 
-  &:active path {
+  &:active {
     fill: #b2b2b2;
   }
 }
