--- a/source/less/blocks/features-list.less
+++ b/source/less/blocks/features-list.less
@@ -11,6 +11,7 @@
 }
 
 .features-list__item {
+  position: relative;
   // border: 1px solid @black;
   // margin: 2px;
 }
@@ -25,78 +26,148 @@
   line-height: 26px;
 }
 
-.features-list__header--house,
-.features-list__header--present,
-.features-list__header--burger {
-  position: relative;
-}
-
-.features-list__header--house::before {
+.features-list__house {
   position: absolute;
-
-  content: "";
-  background-image: url("../img/icon-house.svg");
   top: 18px;
   left: 22px;
-  background-size: 37px 39px;
-  height: 39px;
-  width: 37px;
 
   @media (min-width: @tablet-width) {
-    top: 28px;
-    // left: 60px;
+    top: 57px;
     margin: auto;
     left: 0;
     right: 0;
-    background-size: 75px 78px;
+  }
+}
+
+.features-list__house-icon {
+  height: 38px;
+  width: 37px;
+
+  @media (min-width: @tablet-width) {
     height: 78px;
     width: 75px;
   }
 }
 
-.features-list__header--present::before {
+.features-list__present {
   position: absolute;
   top: 17px;
-  left: 24px;
-  content: "";
-  background-image: url("../img/icon-gift.svg");
-  background-size: 32px 38px;
+  left: 25px;
+
+  @media (min-width: @tablet-width) {
+    top: 57px;
+    margin: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
+.features-list__present-icon {
   height: 38px;
   width: 32px;
 
   @media (min-width: @tablet-width) {
-    top: 28px;
-    // left: 62px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    background-size: 73px 75px;
     height: 75px;
     width: 73px;
   }
 }
 
-.features-list__header--burger::before {
+.features-list__burger {
   position: absolute;
   top: 19px;
-  left: 20px;
-  content: "";
-  background-image: url("../img/icon-burger.svg");
-  background-size: 37px 42px;
-  height: 42px;
-  width: 37px;
+  left: 19px;
 
   @media (min-width: @tablet-width) {
-    top: 30px;
+    top: 59px;
     // left: 60px;
     margin: auto;
     left: 0;
     right: 0;
-    background-size: 76px 75px;
+  }
+}
+
+.features-list__burger-icon {
+  height: 43px;
+  width: 38px;
+
+  @media (min-width: @tablet-width) {
     height: 75px;
     width: 76px;
   }
 }
+
+// .features-list__header--house,
+// .features-list__header--present,
+// .features-list__header--burger {
+//   position: relative;
+// }
+
+// .features-list__header--house::before {
+//   position: absolute;
+
+//   content: "";
+//   background-image: url("../img/icon-house.svg");
+//   top: 18px;
+//   left: 22px;
+//   background-size: 37px 39px;
+//   height: 39px;
+//   width: 37px;
+
+//   @media (min-width: @tablet-width) {
+//     top: 28px;
+//     // left: 60px;
+//     margin: auto;
+//     left: 0;
+//     right: 0;
+//     background-size: 75px 78px;
+//     height: 78px;
+//     width: 75px;
+//   }
+// }
+
+// .features-list__header--present::before {
+//   position: absolute;
+//   top: 17px;
+//   left: 24px;
+//   content: "";
+//   background-image: url("../img/icon-gift.svg");
+//   background-size: 32px 38px;
+//   height: 38px;
+//   width: 32px;
+
+//   @media (min-width: @tablet-width) {
+//     top: 28px;
+//     // left: 62px;
+//     margin: auto;
+//     left: 0;
+//     right: 0;
+//     background-size: 73px 75px;
+//     height: 75px;
+//     width: 73px;
+//   }
+// }
+
+// .features-list__header--burger::before {
+//   position: absolute;
+//   top: 19px;
+//   left: 20px;
+//   content: "";
+//   background-image: url("../img/icon-burger.svg");
+//   background-size: 37px 42px;
+//   height: 42px;
+//   width: 37px;
+
+//   @media (min-width: @tablet-width) {
+//     top: 30px;
+//     // left: 60px;
+//     margin: auto;
+//     left: 0;
+//     right: 0;
+//     background-size: 76px 75px;
+//     height: 75px;
+//     width: 76px;
+//   }
+// }
 
 .features-list__description {
   color: @grey;
